--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "rootDir": "./src",
         "outDir": "./js",
         "downlevelIteration": true,
-        // "target": "es5"
-        "lib": ["es2015", "dom"]
+        "target": "es5",
+        "lib": ["es2016", "dom"]
     }
 }
