--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
         "downlevelIteration": true,
         "target": "es5",
         "lib": ["es2016", "dom"]
-    }
+    },
+    "exclude": ["testing"]
 }
