--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "leger",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://devnull03.github.io/leger",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
